--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -8,6 +8,8 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "master" ]
+  workflow_dispatch:
+    # Allows you to run this workflow manually from the Actions tab
   schedule:
     - cron: '30 10 * * 2'
 
