Issue #373: Fixed sphinx-build warnings and errors when using new versions of Sphinx. Also, tweaked GitHub Actions docs.yml workflow to be more robust and free of warnings.

--- a/docs/source/conf.py.in
+++ b/docs/source/conf.py.in
@@ -95,6 +95,8 @@ pygments_style = 'colorful'
 # A list of ignored prefixes for module index sorting.
 #modindex_common_prefix = []
 
+# Added so that Sphinx's C domain will treat 'bool' as a type name.
+c_extra_keywords = []
 
 # -- Options for HTML output ---------------------------------------------------
 
