--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,7 +32,9 @@ jobs:
     steps:
     - name: Install Dependencies
       run: |
-        sudo apt update && sudo apt install -y \
+        apt-get -o Acquire::Retries=3 update && \
+        env DEBIAN_FRONTEND=noninteractive \
+        apt-get -o Acquire::Retries=3 install -y \
           apt-transport-https \
           apt-file \
           software-properties-common \
@@ -40,6 +42,7 @@ jobs:
           autotools-dev \
           autoconf \
           automake \
+          git \
           make \
           pkgconf \
           libboost-all-dev \
