--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,9 +32,9 @@ jobs:
     steps:
     - name: Install Dependencies
       run: |
-        apt-get -o Acquire::Retries=3 update && \
+        sudo apt-get -o Acquire::Retries=3 update && \
         env DEBIAN_FRONTEND=noninteractive \
-        apt-get -o Acquire::Retries=3 install -y \
+        sudo apt-get -o Acquire::Retries=3 install -y \
           apt-transport-https \
           apt-file \
           software-properties-common \
