--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -171,7 +171,11 @@ jobs:
            ${CC} --version && make
       shell: bash
     - name: make test
-      run: ${CC} --version && make test
+      uses: nick-fields/retry@v3
+      with:
+        timeout_minutes: 10
+        max_attempts: 4
+        command: make test
     - name: check test-suite.log
       if: success() || failure()
       run: |
